--- a/Vocabulary/DesignSystem/en.lproj/Localizable.strings
+++ b/Vocabulary/DesignSystem/en.lproj/Localizable.strings
@@ -1,3 +1,6 @@
+/// Common
+"CFBundleDisplayName" = "Will memorize";
+"CFBundleName" = "Will memorize";
 
 /// FolderView
 "단어장이 비어있어요!" = "The vocabulary is empty!";
