--- a/Vocabulary/DesignSystem/ko.lproj/Localizable.strings
+++ b/Vocabulary/DesignSystem/ko.lproj/Localizable.strings
@@ -1,3 +1,7 @@
+/// Common
+"CFBundleDisplayName" = "외워지리라";
+"CFBundleName" = "외워지리라";
+
 /// FolderView
 "단어장이 비어있어요!" = "단어장이 비어있어요!";
 "확인" = "확인";
