feat: 네비게이션 타이틀 현지화 추가

--- a/Vocabulary/DesignSystem/en.lproj/Localizable.strings
+++ b/Vocabulary/DesignSystem/en.lproj/Localizable.strings
@@ -14,6 +14,7 @@
 "새 폴더" = "New Folder";
 "단어 개수: %lld" = "Number of words: %lld";
 "단어장" = "Vocabulary";
+"외워지리라" = "Will memorize";
 "새로운 폴더 만들기" = "Create a new folder";
 "새로운 폴더 이름" = "New folder name";
 "취소" = "Cancel";
