refactor: 잘못된 현지화 구문으로 인한 Navigation Title 수정

--- a/Vocabulary/DesignSystem/ko.lproj/Localizable.strings
+++ b/Vocabulary/DesignSystem/ko.lproj/Localizable.strings
@@ -10,7 +10,7 @@
 "새 폴더" = "새 폴더";
 "단어 개수: %lld" = "단어 개수: %lld";
 "단어장" = "단어장";
-"외워지리라" = "Will memorize";
+"외워지리라" = "외워지리라";
 "새로운 폴더 만들기" = "새로운 폴더 만들기";
 "새로운 폴더 이름" = "새로운 폴더 이름";
 "취소" = "취소";
