refactor: 단어 카드의 방향에 따라 어느 답안을 작성해야 하는지 구체적으로 안내

--- a/Vocabulary/DesignSystem/en.lproj/Localizable.strings
+++ b/Vocabulary/DesignSystem/en.lproj/Localizable.strings
@@ -30,7 +30,8 @@
 "저장" = "Save";
 
 /// WordsReviewView
-"원문 또는 의미 작성" = "Write the original text or meaning";
+"의미 작성" = "Write meaning";
+"원문 작성" = "Write the original text";
 "제출" = "Submit";
 "넘기기" = "Skip";
 "모든 문제에 대한 답안을 제출하였습니다.\n채점 및 결과를 확인해주세요." = "You submitted answers to all the questions.\nPlease check the scoring results.";
